tests/outref/TC011.ref

-- TC011 : OCTO411 : Add support for INTEGER precision specification to parser for CREATE TABLE statements

-- Test that INTEGER(precision) type works
CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test that NUMERIC(precision) type works
DROP TABLE names;
CREATE TABLE names (id NUMERIC(10) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test that NUMERIC(precision,scale) type works
DROP TABLE names;
CREATE TABLE names (id NUMERIC(10,4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test various precision and scale values with INTEGER and NUMERIC (some work, some issue error)
DROP TABLE names;
CREATE TABLE names (id INTEGER(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;

DROP TABLE names;
CREATE TABLE names (id NUMERIC(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;

DROP TABLE names;
CREATE TABLE names (id NUMERIC(4,2) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(8,7) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(16,18) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(32,25) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(64,2047) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(127,85.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(0,100.87) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1,20) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1.5,-2.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(15.5,20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd',20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd','efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd,'efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd,efgh) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;

OCTO> CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> SELECT id FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::integer FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::numeric FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::varchar FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::text FROM names;
id
0
1
2
3
4
5
(6 rows)
[ERROR]: ERR_TYPE_CAST: Cannot cast type INTEGER to type DATE
LINE 9:1: SELECT id::date FROM names;
                 ^^^^^^^^
OCTO> SELECT id::date FROM names;
[ERROR]: ERR_TYPE_CAST: Cannot cast type INTEGER to type TIME
LINE 10:1: SELECT id::time FROM names;
                  ^^^^^^^^
OCTO> SELECT id::time FROM names;
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(10) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> SELECT id FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::integer FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::numeric FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::varchar FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::text FROM names;
id
0
1
2
3
4
5
(6 rows)
[ERROR]: ERR_TYPE_CAST: Cannot cast type NUMERIC to type DATE
LINE 19:1: SELECT id::date FROM names;
                  ^^^^^^^^
OCTO> SELECT id::date FROM names;
[ERROR]: ERR_TYPE_CAST: Cannot cast type NUMERIC to type TIME
LINE 20:1: SELECT id::time FROM names;
                  ^^^^^^^^
OCTO> SELECT id::time FROM names;
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(10,4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> SELECT id FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::integer FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::numeric FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::varchar FROM names;
id
0
1
2
3
4
5
(6 rows)
OCTO> SELECT id::text FROM names;
id
0
1
2
3
4
5
(6 rows)
[ERROR]: ERR_TYPE_CAST: Cannot cast type NUMERIC to type DATE
LINE 29:1: SELECT id::date FROM names;
                  ^^^^^^^^
OCTO> SELECT id::date FROM names;
[ERROR]: ERR_TYPE_CAST: Cannot cast type NUMERIC to type TIME
LINE 30:1: SELECT id::time FROM names;
                  ^^^^^^^^
OCTO> SELECT id::time FROM names;
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id INTEGER(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 47:1: CREATE TABLE names (id INTEGER(-1) PRIMARY KEY, firstName VARCH...
                                          ^
OCTO> CREATE TABLE names (id INTEGER(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 49:1: CREATE TABLE names (id INTEGER(-1.5) PRIMARY KEY, firstName VAR...
                                          ^
OCTO> CREATE TABLE names (id INTEGER(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 51:1: ...REATE TABLE names (id INTEGER(15.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
OCTO> CREATE TABLE names (id INTEGER(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 53:1: ...EATE TABLE names (id INTEGER('abcd') PRIMARY KEY, firstName VARC...
                                           ^^^^^^
OCTO> CREATE TABLE names (id INTEGER('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 55:1: ...REATE TABLE names (id INTEGER(abcd) PRIMARY KEY, firstName VARCH...
                                            ^^^^
OCTO> CREATE TABLE names (id INTEGER(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
OCTO> CREATE TABLE names (id NUMERIC(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 72:1: CREATE TABLE names (id NUMERIC(-1) PRIMARY KEY, firstName VARCH...
                                          ^
OCTO> CREATE TABLE names (id NUMERIC(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 74:1: CREATE TABLE names (id NUMERIC(-1.5) PRIMARY KEY, firstName VAR...
                                          ^
OCTO> CREATE TABLE names (id NUMERIC(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 76:1: ...REATE TABLE names (id NUMERIC(15.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
OCTO> CREATE TABLE names (id NUMERIC(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 78:1: ...EATE TABLE names (id NUMERIC('abcd') PRIMARY KEY, firstName VARC...
                                           ^^^^^^
OCTO> CREATE TABLE names (id NUMERIC('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 80:1: ...REATE TABLE names (id NUMERIC(abcd) PRIMARY KEY, firstName VARCH...
                                            ^^^^
OCTO> CREATE TABLE names (id NUMERIC(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
OCTO> CREATE TABLE names (id NUMERIC(4,2) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
OCTO> CREATE TABLE names (id NUMERIC(8,7) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 18 must be between zero(0) and precision 16
LINE 87:1: ...EATE TABLE names (id NUMERIC(16,18) PRIMARY KEY, firstName VARC...
                                          ^^^^^^^
OCTO> CREATE TABLE names (id NUMERIC(16,18) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
OCTO> CREATE TABLE names (id NUMERIC(32,25) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
CREATE TABLE
OCTO> DROP TABLE names;
DROP TABLE
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 2047 must be between zero(0) and precision 64
LINE 91:1: ...ATE TABLE names (id NUMERIC(64,2047) PRIMARY KEY, firstName VAR...
                                         ^^^^^^^^^
OCTO> CREATE TABLE names (id NUMERIC(64,2047) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '85.5'
LINE 93:1: ...E TABLE names (id NUMERIC(127,85.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
OCTO> CREATE TABLE names (id NUMERIC(127,85.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '100.87'
LINE 95:1: ...TE TABLE names (id NUMERIC(0,100.87) PRIMARY KEY, firstName VARC...
                                           ^^^^^^
OCTO> CREATE TABLE names (id NUMERIC(0,100.87) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 97:1: CREATE TABLE names (id NUMERIC(-1,20) PRIMARY KEY, firstName VA...
                                          ^
OCTO> CREATE TABLE names (id NUMERIC(-1,20) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 99:1: CREATE TABLE names (id NUMERIC(-1.5,-2.5) PRIMARY KEY, firstNam...
                                          ^
OCTO> CREATE TABLE names (id NUMERIC(-1.5,-2.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 101:1: ...REATE TABLE names (id NUMERIC(15.5,20.835) PRIMARY KEY, firstNam...
                                             ^^^^
OCTO> CREATE TABLE names (id NUMERIC(15.5,20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 103:1: ...EATE TABLE names (id NUMERIC('abcd',20.835) PRIMARY KEY, firstNa...
                                            ^^^^^^
OCTO> CREATE TABLE names (id NUMERIC('abcd',20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 105:1: ...EATE TABLE names (id NUMERIC('abcd','efgh') PRIMARY KEY, firstNa...
                                            ^^^^^^
OCTO> CREATE TABLE names (id NUMERIC('abcd','efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 107:1: ...REATE TABLE names (id NUMERIC(abcd,'efgh') PRIMARY KEY, firstNam...
                                             ^^^^
OCTO> CREATE TABLE names (id NUMERIC(abcd,'efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 109:1: ...REATE TABLE names (id NUMERIC(abcd,efgh) PRIMARY KEY, firstName ...
                                             ^^^^
OCTO> CREATE TABLE names (id NUMERIC(abcd,efgh) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
OCTO> DROP TABLE names;
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
OCTO> 
